# Worms-Haskell

./: README.md
2025l1g019/: .gitignore  worms.cabal
2025l1g019/app/: Desenhar.hs  Eventos.hs  Main.hs  Tempo.hs  Worms.hs
2025l1g019/lib/: Labs2025.hs  Tarefa0_2025.hs  Tarefa0_geral.hs  Tarefa1.hs  Tarefa2.hs  Tarefa3.hs  Tarefa4.hs
2025l1g019/test/: Tarefa1Test.hs  Tarefa2Test.hs  Tarefa3Test.hs  Tarefa4Test.hs
